--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
 			<div class="header">
 				<div class="container header-container">
 					<div class="col-lg-6 header-img-section">
-						<img src="assets/images/header.png">
+						BOOK COVER IMAGE
 					</div>
 					<div class="col-lg-5 offset-lg-1 header-title-section">
-						<p class="header-subtitle">Multipurpose landing template</p>
-						<h1 class="header-title">Beautifully simple, code.</h1>
-						<p class="header-title-text">Codelander is a beautifully simple, clean and lightweight landing page template for all types of businesses, with bold and bright colours.</p>
+						<p class="header-subtitle">AWS 101</p>
+						<h1 class="header-title">Getting Started on AWS with Spring Boot</h1>
+						<p class="header-title-text">All you need to know to get a Spring Boot application into production with Amazon Webservices.</p>
 						<div class="learn-more-btn-section">
-							<a class="nav-link learn-more-btn btn-invert" href="#services">Learn More</a>
+							<a class="nav-link learn-more-btn btn-invert" href="#services">Pre-order now!</a>
 						</div>
 					</div>
 				</div>
@@ -153,8 +153,93 @@
 				</div>
 			</div>
 
+
+
+
 			<!-- SECTION LABEL -->
 			<div id="services"></div>
+
+			<div class="authors-section">
+				<div class="services-section-bg-graphics">
+					<img src="assets/images/services-section-bg.png">
+				</div>
+				<div class="container services-container">
+					<div class="col-lg-5 services-title-section">
+						<p class="services-subtitle">Author</p>
+						<h2 class="services-title">Björn Wilmsmann</h2>
+						<p class="author-blurb">
+							Björn Wilmsmann is an <a href="https://bjoernkw.com/">independent IT consultant</a>, who helps companies transform their business into a digital business.
+						</p>
+						<p class="author-blurb">
+							A longtime software entrepreneur, he’s interested in web apps and SaaS products. He designs and develops business solutions and enterprise applications for his clients.
+						</p>
+						<p class="author-blurb">
+							Apart from helping companies in matters of software quality and improving the availability of and access to information through APIs, Björn provides hands-on training in technologies such as Angular and Spring Boot.
+						</p>
+						<p class="author-blurb">
+							On his <a href="https://bjoernkw.com/blog/">blog</a> he writes about technology, software development, and the software business.
+						</p>
+						<p class="author-blurb">
+							Find out more about Björn on <a href="https://bjoernkw.com/blog/">bjoernkw.com</a>.
+						</p>
+					</div>
+					<div class="col-lg-6 offset-lg-1 services-header-img-section">
+						<img class="author-image" src="assets/images/bjoern.jpg"/>
+					</div>
+				</div>
+			</div>
+
+			<div class="authors-section">
+				<div class="services-section-bg-graphics">
+					<img src="assets/images/services-section-bg.png">
+				</div>
+				<div class="container services-container">
+					<div class="col-lg-5 services-title-section">
+						<p class="services-subtitle">Author</p>
+						<h2 class="services-title">Philip Rieks</h2>
+						<p class="author-blurb">
+							Under the slogan "Enterprise Development with Java made simple" Philip provides guides on how to solve common use cases for enterprise applications using Spring Boot, Jakarta EE and Eclipse MicroProfile.
+						</p>
+						<p class="author-blurb">
+						He is an Senior Java Software Engineer for Germany's leading real estate marketplace and is working with Java, Kotlin, Spring Boot and AWS on daily basis.
+						</p>
+						<p class="author-blurb">
+							Find out more about him on <a href="https://rieckpil.de/">rieckpil.de</a>.
+						</p>
+					</div>
+					<div class="col-lg-6 offset-lg-1 services-header-img-section">
+						<img class="author-image" src="assets/images/philip.jpeg"/>
+					</div>
+				</div>
+			</div>
+
+			<div class="authors-section">
+				<div class="services-section-bg-graphics">
+					<img src="assets/images/services-section-bg.png">
+				</div>
+				<div class="container services-container">
+					<div class="col-lg-5 services-title-section">
+						<p class="services-subtitle">Author</p>
+						<h2 class="services-title">Tom Hombergs</h2>
+						<p class="author-blurb">
+							Tom is a senior software engineer at Atlassian in Sydney, working with AWS and Spring Boot at scale.
+						</p>
+						<p class="author-blurb">
+							He is running the successful software development blog <a href="https://reflectoring.io">reflectoring.io</a>, regularly writing about Java, Spring, and AWS with the goal of explaining not only the How, but the Why of things.
+						</p>
+						<p class="author-blurb">
+							Tom is author of <a href="https://reflectoring.io/book">Get Your Hands Dirty on Clean Architecture</a>, exploring how to implement a hexagonal architecture with Spring Boot.
+						</p>
+						<p class="author-blurb">
+							Find out more about Tom on <a href="https://reflectoring.io">reflectoring.io</a>.
+						</p>
+					</div>
+					<div class="col-lg-6 offset-lg-1 services-header-img-section">
+						<img class="author-image" src="assets/images/tom.jpg"/>
+					</div>
+				</div>
+			</div>
+
 
 			<!-- SERVICES -->
 			<div class="services-section">
@@ -202,6 +287,76 @@
 					</div>
 				</div>
 			</div>
+
+			<div id="authors"></div>
+			<div class="authors-section">
+				<div class="pricing-section-left-bg-graphics">
+					<img src="assets/images/pricing-section-left-bg.png">
+				</div>
+				<div class="pricing-section-right-bg-graphics">
+					<img src="assets/images/pricing-section-right-bg.png">
+				</div>
+				<div class="container pricing-container">
+					<div class="pricing-title">
+						<h2>The Authors</h2>
+					</div>
+					<!-- PRICE PLANS -->
+					<div class="pricing-plan-cards-section">
+						<div class="col-lg-4 col-md-8 col-xs-10 pricing-card-section">
+							<div class="pricing-card">
+								<img class="author-image" src="assets/images/bjoern.jpg"/>
+								<p class="author-blurb">
+									Björn Wilmsmann is an <a href="https://bjoernkw.com/">independent IT consultant</a>, who helps companies transform their business into a digital business.
+								</p>
+								<p class="author-blurb">
+									A longtime software entrepreneur, he’s interested in web apps and SaaS products. He designs and develops business solutions and enterprise applications for his clients.
+								</p>
+								<p class="author-blurb">
+									Apart from helping companies in matters of software quality and improving the availability of and access to information through APIs, Björn provides hands-on training in technologies such as Angular and Spring Boot.
+								</p>
+								<p class="author-blurb">
+									On his <a href="https://bjoernkw.com/blog/">blog</a> he writes about technology, software development, and the software business.
+								</p>
+							</div>
+						</div>
+
+						<div class="col-lg-4 col-md-8 col-xs-10 pricing-card-section">
+							<div class="pricing-card">
+								<p class="pricing-rate">$499</p>
+								<p class="pricing-period">Growth</p>
+								<p class="pricing-text">The sensible option for growing companies</p>
+								<div class="pricing-all-plan-features-section medium-plan-features-section">
+									<ul>
+										<li>Core Business System</li>
+										<li>Team Management</li>
+										<li>Dual Infrastructure</li>
+										<li>Customized Features</li>
+									</ul>
+								</div>
+								<a class="nav-link learn-more-btn" href="#contact">Enquire</a>
+							</div>
+						</div>
+
+						<div class="col-lg-4 col-md-8 col-xs-10 pricing-card-section">
+							<div class="pricing-card">
+								<p class="pricing-rate">$1299</p>
+								<p class="pricing-period">Corporate</p>
+								<p class="pricing-text">Everything a global company needs</p>
+								<div class="pricing-all-plan-features-section advance-plan-features-section">
+									<ul>
+										<li>Core Business System</li>
+										<li>Team Management</li>
+										<li>Dual Infrastructure</li>
+										<li>Customized Features</li>
+									</ul>
+								</div>
+								<a class="nav-link learn-more-btn" href="#contact">Enquire</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
 			<!-- SECTION LABEL -->
 			<div id="pricing"></div>
 			<!-- PRICING -->
