--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- META DATA -->
     <title>AWS101</title>
-    <meta name="description" content="AWS101 - AWS Guide for Spring Boot Java Developers">
+    <meta name="description" content="Stratospheric - From Zero to Production with Spring Boot and AWS">
     <meta name="keywords" content="AWS101,Spring Cloud AS">
     <meta name="author" content="AWS101">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -82,8 +82,8 @@
                 BOOK COVER IMAGE
             </div>
             <div class="col-lg-5 offset-lg-1 header-title-section">
-                <p class="header-subtitle">AWS 101</p>
-                <h1 class="header-title">Getting Started on AWS with Spring Boot</h1>
+                <p class="header-subtitle">Stratospheric</p>
+                <h1 class="header-title">From Zero to Production with Spring Boot and AWS</h1>
                 <p class="header-title-text">All you need to know to get a Spring Boot application into production with
                     AWS.</p>
                 <div class="learn-more-btn-section">
