rename page title

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <!-- META DATA -->
-    <title>AWS101</title>
+    <title>Stratospheric</title>
     <meta name="description" content="Stratospheric - From Zero to Production with Spring Boot and AWS">
-    <meta name="keywords" content="AWS101,Spring Cloud AS">
-    <meta name="author" content="AWS101">
+    <meta name="keywords" content="Stratospheric, Spring Cloud, Spring Boot, AWS">
+    <meta name="author" content="Stratospheric">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <!-- FAVICON -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
