--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <!-- META DATA -->
-    <title>AWS101</title>
+    <title>Stratospheric - Spring Boot and AWS</title>
     <meta name="description" content="Stratospheric - From Zero to Production with Spring Boot and AWS">
-    <meta name="keywords" content="AWS101,Spring Cloud AS">
-    <meta name="author" content="AWS101">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <!-- FAVICON -->
-    <link rel="icon" type="image/png" href="assets/images/favicon.png">
+    <link rel="icon" type="image/png" href="assets/images/favicon/favicon-96x96.png">
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
@@ -31,7 +29,7 @@
         <!-- LOGO -->
         <div class="navbar-brand">
             <a class="navbar-brand-logo" href="#">
-                <img src="assets/images/logo.png" width="155px">
+                <img src="assets/images/rakete.png">
             </a>
         </div>
         <button class="navbar-toggler"
@@ -79,7 +77,7 @@
     <div class="header">
         <div class="container header-container">
             <div class="col-lg-6 header-img-section">
-                BOOK COVER IMAGE
+                <img src="assets/images/book-mockup.png">
             </div>
             <div class="col-lg-5 offset-lg-1 header-title-section">
                 <p class="header-subtitle">Stratospheric</p>
@@ -87,7 +85,7 @@
                 <p class="header-title-text">All you need to know to get a Spring Boot application into production with
                     AWS.</p>
                 <div class="learn-more-btn-section">
-                    <a class="nav-link learn-more-btn btn-invert" href="#mailing-list">Secure a 50% Discount</a>
+                    <a class="nav-link learn-more-btn btn-invert" href="#mailing-list">Secure a 50% discount now</a>
                 </div>
             </div>
         </div>
@@ -100,65 +98,78 @@
             <img src="assets/images/services-section-bg.png">
         </div>
         <div class="container services-container">
-            <div class="col-lg-5 services-title-section">
-                <p class="services-subtitle">Contents</p>
-                <h2 class="services-title">What's in the book?</h2>
-                <p class="services-text">Have a peek at the content planned for this book. </p>
-                <div class="services-accordion">
-                    <button class="accordion">
-                        Get warm with AWS CloudFormation and CDK
-                    </button>
-                    <div class="panel"><p>
-                        Learn how to deploy a Docker image to AWS with CloudFormation and get a sense of the most
-                        important
-                        services AWS offers to build your apps. No previous knowledge required.
-                    </p></div>
-                    <button class="accordion">
-                        Create production-ready environments
-                    </button>
-                    <div class="panel"><p>
-                        Learn how to use CloudFormation to create a virtual private network (VPC) for each of your
-                        application's environments (staging, production).
-                    </p></div>
-                    <button class="accordion">
-                        Build a Continuous Deployment Pipeline
-                    </button>
-                    <div class="panel"><p>
-                        Learn how to build a continuous deployment pipeline to get code changes into production
-                        without friction.
-                    </p></div>
-                    <button class="accordion">
-                        Build User Registration and Login with AWS Cognito
-                    </button>
-                    <div class="panel"><p>
-                        Integrate a Spring Boot application with AWS Cognito user pools to implement user registration
-                        and login with full control of the data.
-                    </p></div>
-                    <button class="accordion">
-                        Connect to a relational database with RDS
-                    </button>
-                    <div class="panel"><p>
-                        Learn how to provision a relational database with RDS and connect it to your Spring Boot
-                        application.
-                    </p></div>
-                    <button class="accordion">
-                        Send E-Mails with SQS and SES
-                    </button>
-                    <div class="panel"><p>
-                        Learn how to configure and use Simple Queue Service and Simple Email Service
-                        to implement a notification mechanism with Spring Boot.
-                    </p></div>
-                    <button class="accordion">
-                        Monitor your application with CloudWatch
-                    </button>
-                    <div class="panel"><p>
-                        Learn how to monitor your Spring Boot application and how to implement
-                        alerting with AWS CloudWatch.
-                    </p></div>
+            <div class="row">
+                <div class="col-12 services-title-section">
+                    <p class="services-subtitle">Contents</p>
+                    <h2 class="services-title">What's in the book?</h2>
+                    <p class="services-text">Have a peek at the content planned for this book. </p>
                 </div>
             </div>
-            <div class="col-lg-6 offset-lg-1 services-header-img-section">
-                <img src="assets/images/undraw_reading_list_4boi.svg">
+            <div class="row">
+                <div class="col-lg-6 services-title-section">
+                    <div class="services-accordion">
+                        <button class="accordion">
+                            Get started with AWS CloudFormation
+                        </button>
+                        <div class="panel"><p>
+                            Learn how to work with AWS CloudFormation to deploy resources to the cloud from scratch. No
+                            previous knowledge required.
+                        </p></div>
+                        <button class="accordion">
+                            Dive deep into AWS Cloud Development Kit (CDK)
+                        </button>
+                        <div class="panel"><p>
+                            Learn how to use AWS CDK with Java to create the infrastructure you need to deploy an
+                            application into production.
+                        </p></div>
+                        <button class="accordion">
+                            Manage different environments
+                        </button>
+                        <div class="panel"><p>
+                            Learn how to use CDK to create multiple identical environments for your application (test,
+                            staging, production).
+                        </p></div>
+                        <button class="accordion">
+                            Build a continuous deployment pipeline
+                        </button>
+                        <div class="panel"><p>
+                            Learn how to build a continuous deployment pipeline to get code changes into production
+                            without friction.
+                        </p></div>
+                    </div>
+                </div>
+                <div class="col-lg-6 services-title-section">
+                    <div class="services-accordion">
+                        <button class="accordion">
+                            Build user registration and login with AWS Cognito
+                        </button>
+                        <div class="panel"><p>
+                            Integrate a Spring Boot application with AWS Cognito user pools to implement user
+                            registration and login with full control of the data.
+                        </p></div>
+                        <button class="accordion">
+                            Connect to a relational database with RDS
+                        </button>
+                        <div class="panel"><p>
+                            Learn how to provision a relational database with RDS and connect it to your Spring Boot
+                            application.
+                        </p></div>
+                        <button class="accordion">
+                            Send emails with SQS and SES
+                        </button>
+                        <div class="panel"><p>
+                            Learn how to configure and use Simple Queue Service (SQS) and Simple Email Service (SES)
+                            to implement a notification mechanism with Spring Boot.
+                        </p></div>
+                        <button class="accordion">
+                            Monitor your application with CloudWatch
+                        </button>
+                        <div class="panel"><p>
+                            Learn how to monitor your Spring Boot application and how to implement
+                            alerting with AWS CloudWatch.
+                        </p></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -174,7 +185,7 @@
                 <p class="services-subtitle">Author</p>
                 <h2 class="services-title">Björn Wilmsmann</h2>
                 <p class="author-blurb">
-                    Björn Wilmsmann is an independent IT consultant, who helps companies transform their business into a
+                    Björn Wilmsmann is an independent IT consultant who helps companies transform their business into a
                     digital business.
                 </p>
                 <p class="author-blurb">
@@ -209,12 +220,12 @@
                 <p class="services-subtitle">Author</p>
                 <h2 class="services-title">Philip Rieks</h2>
                 <p class="author-blurb">
-                    Under the slogan "Enterprise Development with Java made simple" Philip provides guides on how to
+                    Under the slogan "Enterprise development with Java made simple" Philip provides guides on how to
                     solve common use cases for enterprise applications using Spring Boot, Jakarta EE and Eclipse
                     MicroProfile.
                 </p>
                 <p class="author-blurb">
-                    He is an Senior Java Software Engineer for Germany's leading real estate marketplace and is working
+                    He is an senior Java software engineer for Germany's leading real estate marketplace and is working
                     with Java, Kotlin, Spring Boot and AWS on daily basis.
                 </p>
                 <p class="author-blurb">
@@ -262,22 +273,22 @@
     <!-- CONTACT -->
     <div class="contact-section">
         <div class="container contact-container">
-            <div class="col-md-6 contact-title-section">
+            <div class="col-md-6 contact-title-section mailing-list">
                 <p class="contact-subtitle">Mailing List</p>
-                <h2 class="contact-title">Join the Mailing List to Get a 50% Discount</h2>
+                <h2 class="contact-title">Join the mailing list to get 50% off!</h2>
                 <p class="contact-text">You'll be the first to know when we release the book. You'll have access to the
                     book
                     as soon as the first chapters are ready.
-                    </p>
+                </p>
                 <p class="contact-text">
-                Or you just secure the discount now and wait until the book
+                    Or you just secure the discount now and wait until the book
                     is finished to read it. Your choice.</p>
 
                 <p class="contact-text">
                     Your data will be used according to our <a href="/privacy">privacy policy</a>.</p>
                 <form>
                     <div class="learn-more-btn-section">
-                        <input type="email" placeholder="me@example.com" style="font-size:28px">
+                        <input type="email" placeholder="me@example.com">
                     </div>
                     <div class="learn-more-btn-section">
                         <a class="nav-link learn-more-btn btn-invert" href="mailto:name@domain.com">Sign Up</a>
@@ -285,7 +296,7 @@
                 </form>
             </div>
             <div class="col-md-6 contact-header-img">
-                <img src="assets/images/undraw_Mail_sent_re_0ofv.svg">
+                <img src="assets/images/undraw_book_lover_mkck.svg" class="center">
             </div>
         </div>
     </div>
@@ -300,14 +311,15 @@
             <div class="col-lg-3 col-md-6 footer-subsection">
                 <div class="footer-subsection-2-1">
                     <h3 class="footer-subsection-title">About</h3>
-                    <p class="footer-subsection-text">We like to code and love to write. That's why we're writing a book on AWS.</p>
+                    <p class="footer-subsection-text">We love to code and love to write. That's why we're writing a book
+                        on AWS and Spring Boot.</p>
                 </div>
             </div>
             <!-- Footer Column 2 -->
             <div class="col-lg-3 col-md-6 footer-subsection">
                 <h3 class="footer-subsection-title">Contact Us</h3>
                 <ul class="footer-subsection-list">
-                    <li><a href="mailto:info@aws101.dev">info@aws101.dev</a></li>
+                    <li><a href="mailto:info@stratospheric.dev">info@stratospheric.dev</a></li>
                 </ul>
             </div>
             <!-- Footer Column 3 -->
@@ -316,6 +328,11 @@
                 <ul class="footer-subsection-list">
                     <li><a href="/privacy">Privacy</a></li>
                 </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 footer-subsection">
+                <h3 class="footer-subsection-title">Credits</h3>
+                <p class="footer-subsection-text">Rocket logo created by <a
+                        href="https://www.flaticon.com/de/autoren/freepik" title="Freepik">Freepik</a>.</p>
             </div>
         </div>
 
@@ -330,53 +347,13 @@
 <script src="assets/js/accordian.js"></script>
 <!-- Header scroll -->
 <script type="text/javascript">
-				$(window).scroll(function() {
-				    if ($(this).scrollTop() > 20) {
-				      $('#navbar').addClass('header-scrolled');
-				    } else {
-				      $('#navbar').removeClass('header-scrolled');
-				    }
-				  });		
-
-
-
-
-
-
-
-
-</script>
-<script>
-			$(document).ready(function(){
-			  $(".owl-carousel").owlCarousel({
-			  	items:4,
-			  	loop:true,
-			  	nav:true,
-			  	autoplay:true,
-			    autoplayTimeout:2000,
-			    autoplayHoverPause:true,
-			    responsiveClass:true,
-			    responsive:{
-			        0:{
-			            items:1
-			        },
-			        600:{
-			            items:3
-			        },
-			        1000:{
-			            items:4
-			        }
-			    }
-			  });
-			});
-
-
-
-
-
-
-
-
+$(window).scroll(function() {
+    if ($(this).scrollTop() > 20) {
+      $('#navbar').addClass('header-scrolled');
+    } else {
+      $('#navbar').removeClass('header-scrolled');
+    }
+  });
 </script>
 </body>
 </html>
