rebranded to "Stratospheric" and polished

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     MicroProfile.
                 </p>
                 <p class="author-blurb">
-                    He is an senior Java software engineer for Germany's leading real estate marketplace and is working
+                    He is a senior Java software engineer for Germany's leading real estate marketplace and is working
                     with Java, Kotlin, Spring Boot and AWS on daily basis.
                 </p>
                 <p class="author-blurb">
