add privacy policy

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                     is finished to read it. Your choice.</p>
 
                 <p class="contact-text">
-                    Your data will be used according to our <a href="/privacy">privacy policy</a>.</p>
+                    Your data will be used according to our <a href="privacy.html">privacy policy</a>.</p>
                 <form>
                     <div class="learn-more-btn-section">
                         <input type="email" placeholder="me@example.com">
@@ -326,7 +326,7 @@
             <div class="col-lg-3 col-md-6 footer-subsection">
                 <h3 class="footer-subsection-title">Resources</h3>
                 <ul class="footer-subsection-list">
-                    <li><a href="/privacy">Privacy</a></li>
+                    <li><a href="privacy.html">Privacy</a></li>
                 </ul>
             </div>
             <div class="col-lg-3 col-md-6 footer-subsection">
