--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
             <div class="col-lg-5 services-title-section">
                 <p class="services-subtitle">Author</p>
                 <h2 class="services-title">Björn Wilmsmann</h2>
+                <ul class="social">
+                    <li><a target="_blank" title="Follow Björn on Twitter" href="https://twitter.com/bwilmsmann" class="follow-twitter"><i class="fa fa-twitter"></i></a></li>
+                    <li><a target="_blank" title="Follow Björn on LinkedIn" href="https://www.linkedin.com/in/bjoernwilmsmann/" class="follow-linkedin"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
                 <p class="author-blurb">
                     Björn Wilmsmann is an independent IT consultant who helps companies transform their business into a
                     digital business.
@@ -219,6 +223,11 @@
             <div class="col-lg-5 services-title-section">
                 <p class="services-subtitle">Author</p>
                 <h2 class="services-title">Philip Riecks</h2>
+                <ul class="social">
+                    <li><a target="_blank" title="Follow Philip on Twitter" href="https://twitter.com/rieckpil" class="follow-twitter"><i class="fa fa-twitter"></i></a></li>
+                    <li><a target="_blank" title="Follow Philip on LinkedIn" href="https://www.linkedin.com/in/rieckpil/" class="follow-linkedin"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a target="_blank" title="Follow Philip on Youtube" href="https://www.youtube.com/channel/UCEbZTcePN9QwMr1Lr1SED0Q" class="follow-youtube"><i class="fa fa-youtube"></i></a></li>
+                </ul>
                 <p class="author-blurb">
                     Under the slogan "Enterprise development with Java made simple" Philip provides guides on how to
                     solve common use cases for enterprise applications using Spring Boot, Jakarta EE and Eclipse
@@ -246,6 +255,10 @@
             <div class="col-lg-5 services-title-section">
                 <p class="services-subtitle">Author</p>
                 <h2 class="services-title">Tom Hombergs</h2>
+                <ul class="social">
+                    <li><a target="_blank" title="Follow Tom on Twitter" href="https://twitter.com/TomHombergs" class="follow-twitter"><i class="fa fa-twitter"></i></a></li>
+                    <li><a target="_blank" title="Follow Tom on LinkedIn" href="https://www.linkedin.com/in/tom-hombergs-74048777" class="follow-linkedin"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
                 <p class="author-blurb">
                     Tom is a senior software engineer at Atlassian in Sydney, working with AWS and Spring Boot at scale.
                 </p>
