small bio adjustments

--- a/index.html
+++ b/index.html
@@ -226,19 +226,18 @@
                 <ul class="social">
                     <li><a target="_blank" title="Follow Philip on Twitter" href="https://twitter.com/rieckpil" class="follow-twitter"><i class="fa fa-twitter"></i></a></li>
                     <li><a target="_blank" title="Follow Philip on LinkedIn" href="https://www.linkedin.com/in/rieckpil/" class="follow-linkedin"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a target="_blank" title="Follow Philip on Youtube" href="https://www.youtube.com/channel/UCEbZTcePN9QwMr1Lr1SED0Q" class="follow-youtube"><i class="fa fa-youtube"></i></a></li>
+                    <li><a target="_blank" title="Follow Philip on Youtube" href="https://www.youtube.com/c/rieckpil" class="follow-youtube"><i class="fa fa-youtube-play"></i></a></li>
                 </ul>
                 <p class="author-blurb">
-                    Under the slogan "Enterprise development with Java made simple" Philip provides guides on how to
-                    solve common use cases for enterprise applications using Spring Boot, Jakarta EE and Eclipse
-                    MicroProfile.
+                    Under the slogan <i>Enterprise development with Java made simple</i> Philip provides guides on how to
+                    solve common use cases for enterprise applications using Spring Boot, Jakarta EE and MicroProfile.
                 </p>
                 <p class="author-blurb">
                     He is a senior Java software engineer for Germany's leading real estate marketplace and is working
                     with Java, Kotlin, Spring Boot and AWS on daily basis.
                 </p>
                 <p class="author-blurb">
-                    Find out more about him on <a href="https://rieckpil.de/">rieckpil.de</a>.
+                    Find out more about Philip on <a href="https://rieckpil.de/">rieckpil.de</a>.
                 </p>
             </div>
             <div class="col-lg-6 offset-lg-1 services-header-img-section">
