replace rocket image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Stratospheric - From Zero to Production with Spring Boot and AWS">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <!-- FAVICON -->
-    <link rel="icon" type="image/png" href="assets/images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" href="assets/images/rocket-64.png">
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
@@ -29,7 +29,7 @@
         <!-- LOGO -->
         <div class="navbar-brand">
             <a class="navbar-brand-logo" href="#">
-                <img src="assets/images/rakete.png">
+                <img src="assets/images/rocket-64.png">
             </a>
         </div>
         <button class="navbar-toggler"
