removed unnecessary sections from privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Stratospheric - From Zero to Production with Spring Boot and AWS">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <!-- FAVICON -->
-    <link rel="icon" type="image/png" href="assets/images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" href="assets/images/rocket.svg">
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
@@ -248,20 +248,20 @@
                 <p>These third parties have access to your Personal Data only to perform these tasks on our behalf and are obligated
                     not to disclose or use it for any other purpose.</p>
 
-                <h3 id="mailerlite">MailerLite</h3>
+                <h3 id="convertkit">ConvertKit</h3>
 
-                <p>stratospheric uses MailerLite as its email service provider.</p>
+                <p>stratospheric uses ConvertKit as its email service provider.</p>
 
-                <p>MailerLite collects contact information, distributes emails, and tracks actions
+                <p>ConvertKit collects contact information, distributes emails, and tracks actions
                     you take that assist us in measuring the performance of the website and emails.
-                    Upon subscription, MailerLite also tracks the pages you visit on the website.</p>
+                </p>
 
                 <p>Our emails may contain tracking pixels. This pixel is embedded in emails and allows
                     us to analyze the success of our emails. Because of these tracking pixels,
                     we may see if and when you open an email and which links within the email you click.</p>
 
                 <p>This behavior is not passed to third parties. All data submitted at the time of subscription
-                    to our emails is stored on MailerLite’s servers. You may access MailerLite’s privacy policy <a href="https://www.mailerlite.com/legal/privacy-policy">here</a>.</p>
+                    to our emails is stored on ConvertKit’s servers. You may access ConvertKit’s privacy policy <a href="https://convertkit.com/privacy">here</a>.</p>
 
                 <p>At any time, you may be removed from our newsletter list by clicking on the unsubscribe button
                     provided in each email.</p>
@@ -281,31 +281,6 @@
 
                 <p>For more information on the privacy practices of Google, please visit the <a href="https://policies.google.com/privacy?hl=en">Google Privacy &amp; Terms</a>
                     web page.</p>
-
-                <h2 id="advertising">Advertising</h2>
-                <p>We may use third-party Service Providers to show advertisements to you to help support and maintain our Service.</p>
-
-                <h3 id="google-adsense--doubleclick-cookie">Google AdSense &amp; DoubleClick Cookie</h3>
-
-                <p>Google, as a third party vendor, uses cookies to serve ads on our Service. Google’s use of the DoubleClick
-                    cookie enables it and its partners to serve ads to our users based on their visit to our Service or
-                    other websites on the Internet.</p>
-
-                <p>You may opt out of the use of the DoubleClick Cookie for interest-based advertising by visiting
-                    the Google <a href="http://www.google.com/ads/preferences/">Ads Settings</a> web page.</p>
-
-                <h2 id="payments">Payments</h2>
-                <p>We may provide paid products and/or services within the Service. In that case, we use third-party services
-                    for payment processing (e.g. payment processors).</p>
-
-                <p>We will not store or collect your payment card details. That information is provided directly to our
-                    third-party payment processors whose use of your personal information is governed by their Privacy Policy.
-                    These payment processors adhere to the standards set by PCI-DSS as managed by the PCI Security Standards Council,
-                    which is a joint effort of brands like Visa, MasterCard, American Express and Discover. PCI-DSS requirements help
-                    ensure the secure handling of payment information.</p>
-
-                <p>The payment processor we work with is PayPal. Their Privacy Policy can be viewed
-                    <a href="https://www.paypal.com/webapps/mpp/ua/privacy-full">here</a>.</p>
 
                 <h2 id="links-to-other-sites">Links to Other Sites</h2>
                 <p>Our Service may contain links to other sites that are not operated by us. If you click a third party link,
