--- a/privacy.html
+++ b/privacy.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Stratospheric - From Zero to Production with Spring Boot and AWS">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <!-- FAVICON -->
-    <link rel="icon" type="image/png" href="assets/images/rocket.svg">
+    <link rel="icon" href="assets/images/rocket.svg">
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
