--- a/privacy.html
+++ b/privacy.html
@@ -8,6 +8,13 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <!-- FAVICON -->
     <link rel="icon" href="assets/images/rocket.svg">
+
+    <meta name="twitter:title" content="Stratospheric">
+    <meta name="twitter:description" content="From Zero to Production with Spring Boot and AWS">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="assets/images/Mockup-1200x628.jpg">
+    <meta property="og:image" content="assets/images/Mockup-1200x628.jpg">
+
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
