--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="twitter:title" content="Stratospheric">
     <meta name="twitter:description" content="From Zero to Production with Spring Boot and AWS">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="assets/images/Mockup-1200x628.jpg">
-    <meta property="og:image" content="assets/images/Mockup-1200x628.jpg">
+    <meta name="twitter:image" content="https://www.stratospheric.dev/assets/images/Mockup-1200x628.jpg">
+    <meta property="og:image" content="https://www.stratospheric.dev/assets/images/Mockup-1200x628.jpg">
 
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
