Fixed author image on Safari

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 </p>
             </div>
             <div class="col-lg-6 offset-lg-1 services-header-img-section">
-                <img class="author-image" src="assets/images/bjoern.jpg"/>
+                <img class="author-image" src="assets/images/bjoern.jpg">
             </div>
         </div>
     </div>
@@ -256,7 +256,11 @@
                 </p>
             </div>
             <div class="col-lg-6 offset-lg-1 services-header-img-section">
-                <img class="author-image" src="assets/images/philip.jpeg"/>
+                <picture>
+                    <source srcset="assets/images/philip.webp" type="image/webp">
+                    <source srcset="assets/images/philip.jpg" type="image/jpeg"> 
+                    <img class="author-image" src="assets/images/philip.jpg">
+                </picture>
             </div>
         </div>
     </div>
@@ -290,7 +294,7 @@
                 </p>
             </div>
             <div class="col-lg-6 offset-lg-1 services-header-img-section">
-                <img class="author-image" src="assets/images/tom.jpg"/>
+                <img class="author-image" src="assets/images/tom.jpg">
             </div>
         </div>
     </div>
