Added section with link for purchasing the eBook

--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#get-the-book">
+                        <p class="nav-link learn-more-btn btn-invert">Get the book</p>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#authors">
                         <p class="nav-link-menu">Authors</p>
                     </a>
@@ -184,6 +189,19 @@
                             alerting with AWS CloudWatch.
                         </p></div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="get-the-book"></div>
+
+    <div class="services-section">
+        <div class="container services-container">
+            <div class="row">
+                <div class="col-12 services-title-section">
+                    <h2 class="services-title">Get the book</h2>
+                    <p class="services-text">You can <a href="https://leanpub.com/stratospheric">get your copy of the book at Leanpub</a>.</p>
                 </div>
             </div>
         </div>
