--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#get-the-book">
-                        <p class="nav-link learn-more-btn btn-invert">Get the book</p>
+                        <p class="nav-link-menu">Get the book</p>
                     </a>
                 </li>
                 <li class="nav-item">
