Added section with link for purchasing the eBook

--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@
             <div class="row">
                 <div class="col-12 services-title-section">
                     <h2 class="services-title">Get the book</h2>
-                    <p class="services-text">You can <a href="https://leanpub.com/stratospheric">get your copy of the book at Leanpub</a>.</p>
+                    <p class="services-text">
+                        <a class="nav-link learn-more-btn btn-invert" href="https://leanpub.com/stratospheric">Get your copy of the book at Leanpub</a>
+                    </p>
                 </div>
             </div>
         </div>
