--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 <div class="col-12 services-title-section">
                     <h2 class="services-title">Get the book</h2>
                     <p class="services-text">
-                        <a class="nav-link learn-more-btn btn-invert" href="https://leanpub.com/stratospheric">Get your copy of the book at Leanpub</a>
+                        <a class="nav-link learn-more-btn btn-invert" href="https://leanpub.com/stratospheric">Get your copy at Leanpub</a>
                     </p>
                 </div>
             </div>
