--- a/index.html
+++ b/index.html
@@ -264,12 +264,11 @@
                     <li><a target="_blank" title="Follow Philip on Youtube" href="https://www.youtube.com/c/rieckpil" class="follow-youtube"><i class="fa fa-youtube-play"></i></a></li>
                 </ul>
                 <p class="author-blurb">
-                    Under the slogan <i>Enterprise development with Java made simple</i> Philip provides guides on how to
-                    solve common use cases for enterprise applications using Spring Boot, Jakarta EE and MicroProfile.
+                    Under the slogan, <i>Testing Java Applications Made Simple</i>, Philip provides recipes and tips & tricks
+                    to accelerate your testing success and make testing joyful (or at least less painful).
                 </p>
                 <p class="author-blurb">
-                    He is a senior Java software engineer for Germany's leading real estate marketplace and is working
-                    with Java, Kotlin, Spring Boot and AWS on daily basis.
+                    He is an independent IT-Consultant from Berlin and is working with Java, Kotlin, Spring Boot, and AWS on a daily basis.
                 </p>
                 <p class="author-blurb">
                     Find out more about Philip on <a href="https://rieckpil.de/">rieckpil.de</a>.
