update bio with link to courses and YT

--- a/index.html
+++ b/index.html
@@ -268,6 +268,10 @@
                     to accelerate your testing success and make testing joyful (or at least less painful).
                 </p>
                 <p class="author-blurb">
+                    Apart from blogging, he's a course instructor for <a href="https://rieckpil.de/courses">various Java-related
+                    online courses</a> and active <a href="https://www.youtube.com/c/rieckpil">on YouTube</a>.
+                </p>
+                <p class="author-blurb">
                     He is an independent IT-Consultant from Berlin and is working with Java, Kotlin, Spring Boot, and AWS on a daily basis.
                 </p>
                 <p class="author-blurb">
